2006-03-29  Edward Hervey  <edward@fluendo.com>

	* configure.ac:
	* test/Makefile.am:
	* test/simple.c: (composition_pad_added_cb), (compare_segments),
	(sinkpad_event_probe), (videotest_gnl_src), (segment_new),
	(GST_START_TEST), (gnonlin_suite), (main):
	Added testsuite system.
	Added first batch of test to test:
	_ proper start/stop/duration settings/update on sources and compositions
	_ proper data flow in various source combination

2006-03-28  Edward Hervey  <edward@fluendo.com>

	* gnl/gnlcomposition.c: (gnl_composition_class_init),
	(gnl_composition_reset), (gnl_composition_event_handler),
	(gnl_composition_ghost_pad_set_target), (get_clean_toplevel_stack),
	(no_more_pads_object_cb), (update_pipeline):
	Add pad template.
	More debug.
	* gnl/gnlfilesource.c: (decodebin_pad_removed_cb),
	(gnl_filesource_init):
	Add pad template
	Reset the ghostpad if the decodebin pad gets removed.
	* gnl/gnlobject.c: (gnl_object_class_init),
	(gnl_object_cleanup_func), (gnl_object_cleanup),
	(gnl_object_change_state):
	Call GnlObject::prepare AFTER calling parent change_state, otherwise
	pads won't have been re-activated, flushing flash won't have been
	removed and seek on the pads will definitely not work.
	Essential for re-using gnlobjects.
	* gnl/gnlobject.h:
	* gnl/gnlsource.c: (gnl_source_class_init):
	Add pad template

2006-03-24  Wim Taymans  <wim@fluendo.com>

	* gnl/gnlobject.c: (gnl_object_class_init), (gnl_object_init),
	(gnl_object_to_media_time), (gnl_media_to_object_time),
	(gnl_object_covers_func), (gnl_object_covers),
	(gnl_object_prepare_func), (gnl_object_prepare),
	(gnl_object_release_pad), (translate_incoming_seek),
	(translate_outgoing_seek), (translate_outgoing_new_segment),
	(internalpad_event_function), (translate_incoming_position_query),
	(internalpad_query_function), (internalpad_unlink_function),
	(flush_hack_check), (ghostpad_event_function),
	(ghostpad_query_function), (control_internal_pad),