@@ -1,9 +1,0 @@
-pkgconfigdir = $(libdir)/pkgconfig
-pkgconfig_DATA = gnonlin.pc
-
-CLEANFILES = gnonlin.pc
-pcinfiles = \
-           gnonlin.pc.in
-
-DISTCLEANFILES = $(pcinfiles:.in=)
-EXTRA_DIST = $(pcinfiles)
