@@ -1,12 +1,0 @@
-prefix=@prefix@
-exec_prefix=@exec_prefix@
-libdir=@libdir@
-includedir=@includedir@/gstreamer-@GST_MAJORMINOR@
-
-Name: GNonLin Non-linear editing plugins for GStreamer
-Description: Non-linear editing plugins for GStreamer
-Requires: gstreamer-@GST_MAJORMINOR@ 
-Version: @VERSION@
-Libs: -L${libdir}
-Cflags:
-
